--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="/">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="css/nouislider.css" media="screen,projection">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
@@ -27,6 +27,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Cinzel:400" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+
     <title>BLE</title>
   </head>
   <body>
@@ -43,7 +44,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript" src="js/nouislider.min.js"></script>
+    <script type="text/javascript" src="/ble-frontend/public/js/materialize.min.js"></script>
   </body>
 </html>
