case detail favorite button

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css?family=Cinzel:600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     
     <title>BLE</title>
@@ -45,5 +45,6 @@
     -->
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="/ble-frontend/public/js/materialize.min.js"></script>
+    <script src="https://kit.fontawesome.com/22c1ea06bb.js" crossorigin="anonymous"></script>
   </body>
 </html>
